
All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.7.1\...HEAD[Unreleased]

=== Added

* Add a specialized `Result` type for read and write operations for the scrypt
  encrypted data format ({pull-request-url}/56[#56])

=== Changed

* Re-export `hmac` crate ({pull-request-url}/51[#51])
* Change to store the plaintext and the ciphertext as `slice` in `Encryptor`
  and `Decryptor` ({pull-request-url}/54[#54])
* Make `alloc` optional and add `alloc` feature for enables functionality
  requiring an allocator ({pull-request-url}/55[#55])

== {compare-url}/v0.7.0\...v0.7.1[0.7.1] - 2023-08-18

=== Changed

* Change `SPDX-FileCopyrightText` of each file to include only the year of
  initial publication ({pull-request-url}/45[#45])
* Remove unnecessary newline after period ({pull-request-url}/46[#46])

== {compare-url}/v0.6.0\...v0.7.0[0.7.0] - 2023-08-11

=== Changed

* Split `Params` from `format.rs` ({pull-request-url}/38[#38])
* Use `StdRng` instead of `ChaCha20Rng` to generate salt
  ({pull-request-url}/38[#38])
* Rename `Error::InvalidHeaderSignature` to `Error::InvalidHeaderMac`
  ({pull-request-url}/40[#40])
* Rename `Error::InvalidSignature` to `Error::InvalidMac`
  ({pull-request-url}/40[#40])

== {compare-url}/v0.5.3\...v0.6.0[0.6.0] - 2023-08-09

=== Added

* Add doctests to public API ({pull-request-url}/34[#34])
* Implement `Clone`, `Copy`, `Eq` and `PartialEq` for `Error`
  ({pull-request-url}/35[#35])

=== Fixed

* Fix `benches/encrypt.rs` ({pull-request-url}/30[#30])

== {compare-url}/v0.5.2\...v0.5.3[0.5.3] - 2023-08-06

=== Changed

* Update documentation ({pull-request-url}/26[#26])

== {compare-url}/v0.5.1\...v0.5.2[0.5.2] - 2023-08-01

=== Changed

* Change the comment header to the format recommended by the REUSE
  Specification ({pull-request-url}/23[#23])